--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^4.0.3",
+    "taquito": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
